--- a/addon/templates/application.hbs
+++ b/addon/templates/application.hbs
@@ -1,2 +1,5 @@
 bootstrap
-{{init-admin-theme 'bootstrap'}}
+{{#init-admin-theme 'bootstrap' as |api|}}
+  {{api.overrideArea 'modelList' send=(component 'model-list')}}
+{{/init-admin-theme}}
+
