--- a/addon/components/model-list/template.hbs
+++ b/addon/components/model-list/template.hbs
@@ -1,4 +1,48 @@
-{{yield}}
-{{#each records as |record|}}
-  {{record}}
-{{/each}}
+<div class="col-md-6">
+  <div class="{{recordType}} index panel panel-default">
+    <div class="panel-body">
+      <div class="row form-group">
+        <div class="col-md-6">
+          {{input value=filter placeholder='Filter' class='form-control'}}
+        </div>
+
+        <div class="col-md-6">
+          {{#unless hideCreate}}
+            {{#if relationshipGiven}}
+              {{link-to 'Create' 'model-records.new' recordType (query-params relationship-name=relationshipName relationship-id=relationshipId) class='pull-right btn btn-link'}}
+            {{else}}
+              {{link-to 'Create' 'model-records.new' recordType class='pull-right btn btn-link'}}
+            {{/if}}
+          {{/unless}}
+        </div>
+      </div>
+
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            {{#each filteredColumns as |column|}}
+              <th>{{column}}</th>
+            {{/each}}
+          </tr>
+        </thead>
+
+        <tbody class="table-striped">
+          {{#each filteredRecords as |record|}}
+            <tr>
+              {{#each filteredColumns as |column|}}
+              <td>
+                {{#link-to 'model-records.edit' recordType record}}
+                  {{property-print record=record column=column}}
+                {{/link-to}}
+              </td>
+              {{/each}}
+            </tr>
+          {{/each}}
+        </tbody>
+      </table>
+      {{#unless records}}
+        No records!
+      {{/unless}}
+    </div>
+  </div>
+</div>
