--- a/addon/components/model-list/template.hbs
+++ b/addon/components/model-list/template.hbs
@@ -30,16 +30,17 @@
           {{#each filteredRecords as |record|}}
             <tr>
               {{#each filteredColumns as |column|}}
-              <td>
-                {{#link-to 'model-records.edit' recordType record}}
-                  {{property-print record=record column=column}}
-                {{/link-to}}
-              </td>
+                <td>
+                  {{#link-to (concat adminConfig.adminRoute 'model-records.edit') recordType record}}
+                    {{baseComponents.propertyPrint record=record column=column}}
+                  {{/link-to}}
+                </td>
               {{/each}}
             </tr>
           {{/each}}
         </tbody>
       </table>
+
       {{#unless records}}
         No records!
       {{/unless}}
