--- a/addon/components/application-layout/template.hbs
+++ b/addon/components/application-layout/template.hbs
@@ -4,7 +4,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
           <div class="navbar-header">
-            {{link-to adminConfig.adminRoute  class='navbar-brand'}}
+            {{link-to 'Admin' adminConfig.adminRoute class='navbar-brand'}}
           </div>
 
           <div class="collapse navbar-collapse">
