--- a/addon/components/model-edit/template.hbs
+++ b/addon/components/model-edit/template.hbs
@@ -9,7 +9,7 @@
     <div class="panel-body">
       <form role="form">
         {{#each filteredColumns as |column|}}
-          <div {{bind-attr class=":model-column column :form-group"}}>
+          <div class="model-column {{column}}"}}>
             <label>
               {{column}}
               {{baseComponents.adminInput record=this columnValue=column class="form-control"}}
